[package]
name = "secret-shared-db"
version = "0.1.0"
edition = "2024"

[dependencies]
ark-bls12-381 = "0.5.0"
ark-crypto-primitives = { version = "0.5.0", features = [ "sponge" ] }
ark-ec = { version = "0.5.0", features = [ "parallel", "rayon" ] }
ark-ff = { version = "0.5.0", features = [ "parallel", "rayon" ] }
ark-pallas = "0.5.0"
ark-poly = "0.5.0"
ark-serialize = "0.5.0"
ark-std = "0.5.0"
itertools = "0.14.0"
rayon = "1.11.0"
tiny-keccak = { version = "2.0.2", features = [ "shake" ] }
