[package]
name = "secret-shared-db"
version = "0.1.0"
edition = "2024"

[dependencies]
ark-bls12-381 = "0.5.0"
ark-crypto-primitives = { version = "0.5.0", features = [ "sponge" ] }
ark-ec = { version = "0.5.0", features = [ "parallel", "rayon" ] }
ark-ff = { version = "0.5.0", features = [ "parallel", "rayon" ] }
ark-pallas = "0.5.0"
ark-poly = "0.5.0"
ark-serialize = {version="0.5.0", features = [ "derive"  ] }
ark-std = "0.5.0"
array-init = "2.1.0"
curve25519-dalek = { version = "4.1.3", features = ["serde", "rand_core"] }
ed25519-dalek = { version = "2.2.0", features = [ "rand_core", "batch", "digest" ] }
itertools = "0.14.0"
rand = "0.9.2"
# rand_core = "0.9.3"
rayon = "1.11.0"
serde = "1.0.219"
sha2 = "0.10.9"
tiny-keccak = { version = "2.0.2", features = [ "shake" ] }
tokio = { version = "1.47.1", features = [ "time"] }
tokio-stream = "0.1.17"
